# storyspark-agent

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEPLOYMENT.md  LICENSE  MANIFEST.in  PROJECT_SUMMARY.md  README.md  RELEASE_NOTES_v0.8.0.md  SECURITY_REVIEW.md  config.yaml  fix_flake8.sh  fix_flake8_comprehensive.py  fix_remaining_flake8.py  pyproject.toml  release.sh  requirements-dev.txt  requirements.txt  run.py  setup-dev.sh  setup.py  story_sparks.md
.github/workflows/: lint.yml  test.yml
data/: generated_seeds.json  history_items.json
src/: __init__.py  __version__.py  config_loader.py  data_fetcher.py  logger_config.py  main.py  story_seed_generator.py  trend_detector.py
tests/: test_config_loader.py  test_config_loader_extended.py  test_data_fetcher.py  test_data_fetcher_extended.py  test_logger_config.py  test_main.py  test_main_extended.py  test_main_simple.py  test_story_seed_generator.py  test_story_seed_generator_extended.py  test_trend_detector.py
tests/integration/: __init__.py  test_debug.py  test_debug2.py  test_debug3.py  test_debug4.py  test_debug_simple.py  test_integration.py  test_simple.py
