[tool.mypy]
ignore_missing_imports = true
warn_return_any = false
warn_unused_ignores = false
check_untyped_defs = false
disallow_untyped_defs = false
strict = false
exclude = [
    'tests/',
    'test_*.py',
]

[tool.black]
line-length = 120
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 120

[project]
name = "storyspark-agent"
version = "0.1.0"
description = "AI-powered agent that monitors Reddit and RSS feeds for trending topics"
requires-python = ">=3.10"
dependencies = [
    "google-generativeai",
    "PyYAML",
    "feedparser",
    "requests",
    "schedule",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.4",
    "pytest-cov==4.1.0",
    "pytest-timeout==2.2.0",
    "pre-commit==3.6.0",
    "black==23.1.0",
    "isort==5.12.0",
    "flake8==6.0.0",
    "bandit==1.7.4",
    "mypy==1.0.1",
    "types-requests==2.31.0",
    "types-PyYAML==6.0.12",
]
