[tool.setuptools]
packages = ["src"]

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "storyspark-agent"
version = "0.8.0"
description = "AI-powered agent that monitors Reddit and RSS feeds for trending topics and generates story ideas"
authors = [{name = "Nazuna-io", email = ""}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["ai", "story-generation", "trend-detection", "rss", "reddit", "gemini"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "feedparser>=6.0.0",
    "requests>=2.31.0",
    "google-generativeai>=0.8.0",
    "schedule>=1.2.0",
    "pyyaml>=6.0",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.2.0",
    "black>=23.1.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.1",
    "bandit>=1.7.4",
    "pre-commit>=3.6.0",
    "types-requests>=2.31.0",
    "types-PyYAML>=6.0.12",
]

[project.scripts]
storyspark = "src.main:main"
storyspark-agent = "src.main:main"

[project.urls]
"Homepage" = "https://github.com/Nazuna-io/storyspark-agent"
"Bug Tracker" = "https://github.com/Nazuna-io/storyspark-agent/issues"
"Source Code" = "https://github.com/Nazuna-io/storyspark-agent"
"Documentation" = "https://github.com/Nazuna-io/storyspark-agent#readme"

[tool.mypy]
ignore_missing_imports = true
warn_return_any = false
warn_unused_ignores = false
check_untyped_defs = false
disallow_untyped_defs = false
strict = false
exclude = [
    'tests/',
    'test_*.py',
]

[tool.black]
line-length = 120
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 120
